--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,25 +1,21 @@
 [package]
-name = "triton_grow"
-version = "2.3.3"
+name = "esp-idf-triton"
+version = "0.1.0"
 authors = ["BradenEverson"]
-description = "General purpose machine learning crate for neural network development and analysis"
+description = "Embedded neural network forward feeding for precompiled models created by the triton_grow crate"
 edition = "2021"
 license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-csv = "1.3.0"
 flate2 = "1.0.28"
 futures = "0.3.30"
 itertools = "0.12.0"
-plotters = "0.3.5"
 rand = "0.8.5"
 rand_distr = "0.4.3"
 rand_pcg = "0.3.1"
 rand_seeder = "0.2.3"
-rayon = "1.8.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1.35.1", features = ["rt", "full"] }
 typetag = "0.2.14"
