--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "esp-idf-triton"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["BradenEverson"]
 description = "Embedded neural network forward feeding for precompiled models created by the triton_grow crate"
 edition = "2021"
@@ -17,5 +17,6 @@ rand_distr = "0.4.3"
 rand_pcg = "0.3.1"
 rand_seeder = "0.2.3"
 serde = { version = "1.0", features = ["derive"] }
+serde_cbor = "0.11.2"
 serde_json = "1.0"
 typetag = "0.2.14"
